gobmkida/c0/print_eye
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_eye/src/engine/optics.c:1233:10: error: use of undeclared identifier 'off_4E3F18'
gprintf( off_4E3F18); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_eye/src/engine/optics.c:1250:11: error: use of undeclared identifier 'off_4E3F18'
gprintf( &off_4E3F18[4]); 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/print_eye/src/obj/1/optics.o] Error 1
